--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="hero">
     <div class="wrap">
-      <img class="logo" src="assets/logo.svg" alt="Logo Les Pâtisseries de Lida">
+      <img class="logo" src="assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
       <h1 class="display">Les Pâtisseries de Lida</h1>
       <p class="subtitle">Créations sur mesure en Cake Design & Pâtisserie fine</p>
       <nav class="nav">
