--- a/index.html
+++ b/index.html
@@ -76,12 +76,40 @@
 
     <!-- Galerie -->
     <section id="galerie" class="section">
-      <h2>Galerie</h2>
-      <div class="gallery">
-        <img src="assets/photos/1.jpg" alt="Gâteau 1">
-        <img src="assets/photos/2.jpg" alt="Gâteau 2">
-        <img src="assets/photos/3.jpg" alt="Gâteau 3">
-      </div>
+  <h2>Galerie</h2>
+  <p>Choisissez une catégorie pour découvrir nos créations.</p>
+
+  <div class="gallery cards">
+    <!-- Enfants -->
+    <a class="cat-card" href="galerie-enfants.html">
+      <img src="assets/photos/categories/enfants/cover.jpg" alt="Gâteaux d'anniversaire pour enfants">
+      <h3>Anniversaires Enfants</h3>
+    </a>
+
+    <!-- Mariage -->
+    <a class="cat-card" href="galerie-mariage.html">
+      <img src="assets/photos/categories/mariage/cover.jpg" alt="Gâteaux de mariage">
+      <h3>Mariage</h3>
+    </a>
+
+    <!-- Number Cake -->
+    <a class="cat-card" href="galerie-number-cake.html">
+      <img src="assets/photos/categories/number-cake/cover.jpg" alt="Number cakes">
+      <h3>Number Cake</h3>
+    </a>
+
+    <!-- Bento Cake -->
+    <a class="cat-card" href="galerie-bento.html">
+      <img src="assets/photos/categories/bento/cover.jpg" alt="Bento cakes">
+      <h3>Bento Cake</h3>
+    </a>
+
+    <!-- Biscuits personnalisés -->
+    <a class="cat-card" href="galerie-biscuits.html">
+      <img src="assets/photos/categories/biscuits/cover.jpg" alt="Biscuits personnalisés">
+      <h3>Biscuits personnalisés</h3>
+    </a>
+  </div>
     </section>
 
     <!-- Contact -->
