--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- Mariage -->
     <a class="cat-card" href="galerie-mariage.html">
-      <img src="assets/photos/categories/mariage/cover.jpg" alt="Gâteaux de mariage">
+      <img src="assets/galerie/mariage/Mariage.png" alt="Gâteaux de mariage">
       <h3>Mariage</h3>
     </a>
 
