--- a/index.html
+++ b/index.html
@@ -80,35 +80,35 @@
   <p>Choisissez une catégorie pour découvrir nos créations.</p>
 
   <div class="gallery cards">
-    <!-- Enfants -->
-    <a class="cat-card" href="galerie-enfants.html">
-      <img src="assets/photos/categories/enfants/cover.jpg" alt="Gâteaux d'anniversaire pour enfants">
-      <h3>Anniversaires Enfants</h3>
-    </a>
+   <!-- Enfants -->
+<a class="cat-card" href="galerie-enfants.html">
+  <img src="assets/galerie/children/cover.jpg" alt="Gâteaux d'anniversaire pour enfants">
+  <h3>Anniversaires Enfants</h3>
+</a>
 
-    <!-- Mariage -->
-    <a class="cat-card" href="galerie-mariage.html">
-      <img src="assets/galerie/mariage/Mariage.png" alt="Gâteaux de mariage">
-      <h3>Mariage</h3>
-    </a>
+<!-- Mariage -->
+<a class="cat-card" href="galerie-mariage.html">
+  <img src="assets/galerie/mariage/cover.jpg" alt="Gâteaux de mariage">
+  <h3>Mariage</h3>
+</a>
 
-    <!-- Number Cake -->
-    <a class="cat-card" href="galerie-number-cake.html">
-      <img src="assets/photos/categories/number-cake/cover.jpg" alt="Number cakes">
-      <h3>Number Cake</h3>
-    </a>
+<!-- Number Cake -->
+<a class="cat-card" href="galerie-number-cake.html">
+  <img src="assets/galerie/numbercake/cover.jpg" alt="Number cakes">
+  <h3>Number Cake</h3>
+</a>
 
-    <!-- Bento Cake -->
-    <a class="cat-card" href="galerie-bento.html">
-      <img src="assets/photos/categories/bento/cover.jpg" alt="Bento cakes">
-      <h3>Bento Cake</h3>
-    </a>
+<!-- Bento Cake -->
+<a class="cat-card" href="galerie-bento.html">
+  <img src="assets/galerie/bento/cover.jpg" alt="Bento cakes">
+  <h3>Bento Cake</h3>
+</a>
 
-    <!-- Biscuits personnalisés -->
-    <a class="cat-card" href="galerie-biscuits.html">
-      <img src="assets/photos/categories/biscuits/cover.jpg" alt="Biscuits personnalisés">
-      <h3>Biscuits personnalisés</h3>
-    </a>
+<!-- Biscuits personnalisés -->
+<a class="cat-card" href="galerie-biscuits.html">
+  <img src="assets/galerie/biscuit/cover.jpg" alt="Biscuits personnalisés">
+  <h3>Biscuits personnalisés</h3>
+</a>
   </div>
     </section>
 
