--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 </a>
 
 <!-- Mariage -->
-<a class="cat-card" href="galerie-mariage.html">
-  <img src="assets/galerie/mariage/cover.jpg" alt="Gâteaux de mariage">
+  <a class="cat-card" href="assets/galerie/mariage/mariage.html">
+  <img src="assets/galerie/mariage/Mariage.jpg" alt="Gâteaux de mariage">
   <h3>Mariage</h3>
-</a>
+    </a>
 
 <!-- Number Cake -->
 <a class="cat-card" href="galerie-number-cake.html">
