--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Galerie Mariage — Les Pâtisseries de Lida</title>
+  <title>Mariage — Les Pâtisseries de Lida</title>
   <link rel="stylesheet" href="../../../style.css" />
   <meta name="description" content="Gâteaux de mariage et pièces montées élégantes.">
 </head>
@@ -22,7 +22,7 @@
   <main class="section" id="grid">
     <h2>Nos créations de mariage</h2>
     <div class="gallery">
-      <img src="../../../assets/galerie/mariage/01.jpg" alt="Gâteau mariage 1">
+      <img src="../../../assets/galerie/mariage/1.jpg" alt="Gâteau mariage 1">
       <img src="../../../assets/galerie/mariage/02.jpg" alt="Gâteau mariage 2">
       <img src="../../../assets/galerie/mariage/03.jpg" alt="Gâteau mariage 3">
       <img src="../../../assets/galerie/mariage/04.jpg" alt="Gâteau mariage 4">
