--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -22,7 +22,7 @@
   <main class="section" id="grid">
     <h2>Nos créations de mariage</h2>
     <div class="gallery">
-      <img src="../../../assets/galerie/mariage/1.jpg" alt="Gâteau mariage 1">
+      <img src="../../../assets/galerie/mariage/1.png" alt="Gâteau mariage 1">
       <img src="../../../assets/galerie/mariage/02.jpg" alt="Gâteau mariage 2">
       <img src="../../../assets/galerie/mariage/03.jpg" alt="Gâteau mariage 3">
       <img src="../../../assets/galerie/mariage/04.jpg" alt="Gâteau mariage 4">
