--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <!-- Mariage -->
   <a class="cat-card" href="assets/galerie/mariage/mariage.html">
-  <img src="assets/galerie/mariage/Mariage.jpg" alt="Gâteaux de mariage">
+  <img src="assets/galerie/mariage/Mariage.png" alt="Gâteaux de mariage">
   <h3>Mariage</h3>
     </a>
 
