--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -36,5 +36,64 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+/* ....برای این‌که وقتی روی عکس کلیک می‌کنی، عکس به صورت بزرگ و زیبا وسط صفحه باز بشه ...*/  
+  <!-- Lightbox (popup photo viewer) -->
+<style>
+  .lightbox {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .lightbox img {
+    max-width: 90%;
+    max-height: 80%;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.4);
+  }
+
+  .lightbox:target {
+    display: flex;
+  }
+
+  .lightbox-close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    font-size: 40px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+  }
+</style>
+
+<!-- ساخت گالری با لینک‌ها -->
+<script>
+document.querySelectorAll('.gallery img').forEach(img => {
+  img.addEventListener('click', () => {
+    // ایجاد لایت‌باکس
+    const lightbox = document.createElement('div');
+    lightbox.classList.add('lightbox');
+    lightbox.innerHTML = `
+      <a href="#" class="lightbox-close">&times;</a>
+      <img src="${img.src}" alt="${img.alt}">
+    `;
+    document.body.appendChild(lightbox);
+    lightbox.style.display = 'flex';
+
+    // بستن با کلیک
+    lightbox.addEventListener('click', e => {
+      if (e.target === lightbox || e.target.classList.contains('lightbox-close')) {
+        lightbox.remove();
+      }
+    });
+  });
+});
+</script>
 </body>
 </html>
