--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -23,10 +23,10 @@
     <h2>Nos créations de mariage</h2>
     <div class="gallery">
       <img src="../../../assets/galerie/mariage/1.png" alt="Gâteau mariage 1">
-      <img src="../../../assets/galerie/mariage/02.jpg" alt="Gâteau mariage 2">
-      <img src="../../../assets/galerie/mariage/03.jpg" alt="Gâteau mariage 3">
-      <img src="../../../assets/galerie/mariage/04.jpg" alt="Gâteau mariage 4">
-      <img src="../../../assets/galerie/mariage/05.jpg" alt="Gâteau mariage 5">
+      <img src="../../../assets/galerie/mariage/2.jpg" alt="Gâteau mariage 2">
+      <img src="../../../assets/galerie/mariage/3.jpg" alt="Gâteau mariage 3">
+      <img src="../../../assets/galerie/mariage/4.jpg" alt="Gâteau mariage 4">
+      <img src="../../../assets/galerie/mariage/5.jpg" alt="Gâteau mariage 5">
     </div>
   </main>
 
@@ -36,7 +36,8 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
-/* ....برای این‌که وقتی روی عکس کلیک می‌کنی، عکس به صورت بزرگ و زیبا وسط صفحه باز بشه ...  */  
+  
+<!-- ....برای این‌که وقتی روی عکس کلیک می‌کنی، عکس به صورت بزرگ و زیبا وسط صفحه باز بشه ...  -->  
   <!-- Lightbox (popup photo viewer) -->
 <style>
   .lightbox {
