--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -23,10 +23,10 @@
     <h2>Nos créations de mariage</h2>
     <div class="gallery">
       <img src="../../../assets/galerie/mariage/1.png" alt="Gâteau mariage 1">
-      <img src="../../../assets/galerie/mariage/2.jpg" alt="Gâteau mariage 2">
-      <img src="../../../assets/galerie/mariage/3.jpg" alt="Gâteau mariage 3">
-      <img src="../../../assets/galerie/mariage/4.jpg" alt="Gâteau mariage 4">
-      <img src="../../../assets/galerie/mariage/5.jpg" alt="Gâteau mariage 5">
+      <img src="../../../assets/galerie/mariage/2.png" alt="Gâteau mariage 2">
+      <img src="../../../assets/galerie/mariage/3.png" alt="Gâteau mariage 3">
+      <img src="../../../assets/galerie/mariage/4.png" alt="Gâteau mariage 4">
+      <img src="../../../assets/galerie/mariage/5.png" alt="Gâteau mariage 5">
     </div>
   </main>
 
