--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     </nav>
   </header>
 
+  
+<!-- قرصی سفید براق -->
+<a class="btn btn--pill btn--white" href="#">Commander</a>
+
+
   <main>
     <!-- Sucré -->
     <section id="creations" class="section">
