--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
+
+  <a href="#galerie" class="btn">Galerie</a>
+<a href="#contact" class="btn">Contact</a>
+
+  
 </head>
 <body>
   <!-- Hero / Header -->
