--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <!-- قرصی سفید براق -->
 <a class="btn btn--pill btn--white" href="#">Commander</a>
     
-    <nav class="nav">
-      <a href="#creations">Créations</a>
-      <a href="#sale">Salé & verrines</a>
-      <a href="#galerie">Galerie</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <nav class="nav-buttons">
+  <a href="#galerie" class="btn">Galerie</a>
+  <a href="#contact" class="btn">Contact</a>
+  <a href="#creations">Créations</a>
+  <a href="#sale">Salé & verrines</a>
+     </nav>
   </header>
 
   
