--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   <header class="hero">
     <img class="logo" src="assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
     <h1>Les Pâtisseries de Lida</h1>
-    <p class="subtitle">Créations sur mesure en Cake Design & Pâtisserie fine</p>
-    
-
+  
     <!-- قرصی سفید براق -->
 
    <nav class="nav-buttons">
@@ -31,6 +29,11 @@
   <a href="# verrines" class="btn">Verrines</a> 
   <a class="btn btn--pill btn--white" href="#">Commander</a>    
     </nav>
+
+     <p class="subtitle">
+
+      Nous sommes fiers de vous présenter notre exquise collection de gâteaux, qui vous mettront l’eau à la bouche et vous donneront envie d’en redemander. Des grands classiques aux créations les plus innovantes, chaque bouchée vous transportera dans un univers de pur délice.
+     </p>
   </header>
 
   
