--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
   <a class="btn btn--pill btn--white" href="#">Commander</a>    
     </nav>
 
-     <p class="subtitle">
-
-      Nous sommes fiers de vous présenter notre exquise collection de gâteaux, qui vous mettront l’eau à la bouche et vous donneront envie d’en redemander. Des grands classiques aux créations les plus innovantes, chaque bouchée vous transportera dans un univers de pur délice.
-     </p>
   </header>
 
   
   <main>
     <!-- Sucré -->
     <section id="creations" class="section">
+<p class="subtitle">
+
+      <h2>Nous sommes fiers de vous présenter notre exquise collection de gâteaux, qui vous mettront l’eau à la bouche et vous donneront envie d’en redemander. Des grands classiques aux créations les plus innovantes, chaque bouchée vous transportera dans un univers de pur délice.
+      </h2>
+</p>
+      
       <h2>Nos créations sucrées</h2>
       <p>
         Gâteaux d’exception, pièces montées élégantes et desserts raffinés — entièrement personnalisés selon vos envies,
