--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="gallery cards">
    <!-- Enfants -->
 <a class="cat-card" href="galerie-enfants.html">
-  <img src="assets/galerie/children/cover.jpg" alt="Gâteaux d'anniversaire pour enfants">
+  <img src="assets/galerie/anniversaireenfants/anvenft.png" alt="Gâteaux d'anniversaire pour enfants">
   <h3>Anniversaires Enfants</h3>
 </a>
 
@@ -106,19 +106,19 @@
 
 <!-- Number Cake -->
 <a class="cat-card" href="galerie-number-cake.html">
-  <img src="assets/galerie/numbercake/cover.jpg" alt="Number cakes">
+  <img src="assets/galerie/numbercakes/numbercake.png" alt="Number cakes">
   <h3>Number Cake</h3>
 </a>
 
 <!-- Bento Cake -->
 <a class="cat-card" href="galerie-bento.html">
-  <img src="assets/galerie/bento/cover.jpg" alt="Bento cakes">
+  <img src="assets/galerie/bento/bento. png" alt="Bento cakes">
   <h3>Bento Cake</h3>
 </a>
 
 <!-- Biscuits personnalisés -->
 <a class="cat-card" href="galerie-biscuits.html">
-  <img src="assets/galerie/biscuit/cover.jpg" alt="Biscuits personnalisés">
+  <img src="assets/galerie/biscuitperso/sable.png" alt="Biscuits personnalisés">
   <h3>Biscuits personnalisés</h3>
 </a>
   </div>
