Add gender reveal section for children's birthdays

--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
   <img src="assets/galerie/biscuitperso/sable.png" alt="Biscuits personnalisés">
   <h3>Biscuits personnalisés</h3>
 </a>
+
+<!-- Gender reveal-->
+<a class="cat-card" href="galerie-enfants.html">
+  <img src="assets/galerie/anniversairesenfants/anvenft.png" alt="Gâteaux d'anniversaire pour enfants">
+  <h3>Anniversaires Enfants</h3>
+</a>
+    
   </div>
     </section>
 
