Update link and image for Gender Reveal section

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 </a>
 
 <!-- Gender reveal-->
-<a class="cat-card" href="galerie-enfants.html">
-  <img src="assets/galerie/anniversairesenfants/anvenft.png" alt="Gâteaux d'anniversaire pour enfants">
-  <h3>Anniversaires Enfants</h3>
+<a class="cat-card" href="galerie-gender-reveal.html">
+  <img src="assets/galerie/gender-reveal/gender1.png" alt="Gâteaux d'anniversaire pour enfants">
+  <h3>Gender Reveal</h3>
 </a>
     
   </div>
