Update link for gender reveal gallery

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </a>
 
 <!-- Gender reveal-->
-<a class="cat-card" href="galerie-gender-reveal.html">
+<a class="cat-card" href="assets/galerie/gender-reveal/gender-reveal.html">
   <img src="assets/galerie/gender-reveal/gender1.png" alt="Gâteaux d'anniversaire pour enfants">
   <h3>Gender Reveal</h3>
 </a>
