Add Cupcakes section to index.html

--- a/index.html
+++ b/index.html
@@ -127,7 +127,12 @@
   <img src="assets/galerie/gender-reveal/gender1.png" alt="Gâteaux d'anniversaire pour enfants">
   <h3>Gender Reveal</h3>
 </a>
-    
+
+    <!-- Cupcakes -->
+<a class="cat-card" href="assets/galerie/cupkakes/cupcake.html">
+  <img src="assets/galerie/cupkakes/cupcake.png" alt="Cupcakes personnalisés au thème">
+  <h3>Cupkakes</h3>
+</a>
   </div>
     </section>
 
