--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <!-- Cupcakes -->
 <a class="cat-card" href="assets/galerie/cupkakes/cupcake.html">
   <img src="assets/galerie/cupkakes/cupcake.png" alt="Cupcakes personnalisés au thème">
-  <h3>Cupkakes</h3>
+  <h3>Cupcakes</h3>
 </a>
   </div>
     </section>
