Change h3 to h2 for custom cakes section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       </p>
       <ul class="cards">
         <li>
-          <h3>Gâteaux sur mesure</h3>
+          
+<h2 class="handwritten">Gâteaux sur mesure</h2
+        
           <p>Anniversaires, baby shower, corporate… Thèmes, formes et textures modernes.</p>
         </li>
         <li>
