--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </h2>
 </p>
       
-<h2 class="handwritten">Les créations de Lida</h2
+<h2 class="handwritten">Les créations de Lida</h2>
       <h2>Nos créations sucrées</h2>
       <p>
         Gâteaux d’exception, pièces montées élégantes et desserts raffinés — entièrement personnalisés selon vos envies,
