Refactor subtitle to use paragraph instead of heading
Updated the subtitle section to use a paragraph tag for better semantic structure.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
     <section id="creations" class="section">
 <p class="subtitle">
 
-      <h2>Nous sommes fiers de vous présenter notre exquise collection de gâteaux, qui vous mettront l’eau à la bouche et vous donneront envie d’en redemander. Des grands classiques aux créations les plus innovantes, chaque bouchée vous transportera dans un univers de pur délice.
-      </h2>
+      <p class="subtitle">
+  Nous sommes fiers de vous présenter notre exquise collection de gâteaux, 
+  qui vous mettront l’eau à la bouche et vous donneront envie d’en redemander. 
+  Des grands classiques aux créations les plus innovantes, chaque bouchée vous transportera 
+  dans un univers de pur délice.
+</p>
 </p>
       
 <h2 class="handwritten">Les créations de Lida</h2>
