--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
       <ul class="cards">
         <li>
           
-<h2 class="handwritten">Gâteaux sur mesure</h2
+<h2 class="handwritten">Gâteaux sur mesure</h2>
         
           <p>Anniversaires, baby shower, corporate… Thèmes, formes et textures modernes.</p>
         </li>
         <li>
-          <h3>Pièces montées</h3>
-          <p>Architecture élégante pour mariages et grandes réceptions.</p>
+<h2 class="handwritten">Pièces montées</h2>          
+        <p>Architecture élégante pour mariages et grandes réceptions.</p>
         </li>
         <li>
-          <h3>Desserts raffinés</h3>
-          <p>Entremets, cupcakes, biscuits décorés et autres douceurs.</p>
+<h2 class="handwritten">Desserts raffinés</h2>
+        <p>Entremets, cupcakes, biscuits décorés et autres douceurs.</p>
         </li>
       </ul>
     </section>
