Enhance mariage.html with wedding cake details
Added a welcoming message and design inspiration for wedding cakes.

--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -21,6 +21,21 @@
 
   <main class="section" id="grid">
     <h2>Nos créations de mariage</h2>
+    <p>
+    Toutes nos félicitations aux futurs mariés !
+Chez Les Pâtisseries de Lida, nous avons à cœur de transformer vos rêves en douce réalité.
+Chaque création est imaginée et réalisée avec élégance, passion et raffinement, pour sublimer le plus beau jour de votre vie.
+Forts de notre expérience dans la conception et la livraison de gâteaux de mariage sur mesure, nous avons le plaisir d’accompagner des couples à travers tout le Nord (59) et le Pas-de-Calais (62), afin de créer des souvenirs aussi délicieux qu’inoubliables.
+    
+    </p>
+
+<p> 
+💍 Vous hésitez sur le design ?
+L’inspiration ne manque pas ! Pinterest, Google Images et les magazines de mariage regorgent d’idées pour imaginer le gâteau de vos rêves.
+Et pour encore plus d’inspiration, découvrez également notre galerie de photos de gâteaux de mariage signés Les Pâtisseries de Lida.
+
+</p>
+
     <div class="gallery">
       <img src="../../../assets/galerie/mariage/1.png" alt="Gâteau mariage 1">
       <img src="../../../assets/galerie/mariage/2.png" alt="Gâteau mariage 2">
