--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -41,7 +41,8 @@ Et pour encore plus d’inspiration, découvrez également notre galerie de phot
       <img src="../../../assets/galerie/mariage/2.png" alt="Gâteau mariage 2">
       <img src="../../../assets/galerie/mariage/Mariagep-3.png" alt="Gâteau mariage 3">
       <img src="../../../assets/galerie/mariage/mariage-4.png" alt="Gâteau mariage 4">
-      <img src="../../../assets/galerie/mariage/mariage-5.png" alt="Gâteau mariage 5">
+      <img src="../../../assets/galerie/mariage/mariage-5.jpg" alt="Gâteau mariage 5">
+      <img src="../../../assets/galerie/mariage/mariage-6.png" alt="Gâteau mariage 6">
     </div>
   </main>
 
