--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -12,10 +12,11 @@
     <img class="logo" src="../../../assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
     <h1>Mariage</h1>
     
-    <nav class="nav">
-      <a href="../../../index.html#galerie">⟵ Retour</a>
-      <a href="#grid">Galerie</a>
-      <a href="../../../index.html#contact">Contact</a>
+  <nav class="nav-buttons">
+
+  <a href="../../../index.html#galerie" class="btn">⟵ Retour</a>
+  <a href="#galerie" class="btn">Galerie</a>
+  <a href="../../../index.html#contact" class="btn">Contact</a>
     </nav>
   </header>
 
