--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </a>
 
 <!-- Number Cake -->
-<a class="cat-card" href="galerie-number-cake.html">
+<a class="cat-card" href="assets/galerie/numbercakes/numbercakes.html">
   <img src="assets/galerie/numbercakes/numbercake.png" alt="Number cakes">
   <h3>Number Cake</h3>
 </a>
