--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <!-- Gender reveal-->
 <a class="cat-card" href="assets/galerie/gender-reveal/gender-reveal.html">
-  <img src="assets/galerie/gender-reveal/gender1.png" alt="Gâteaux d'anniversaire pour enfants">
+  <img src="assets/galerie/gender-reveal/gender1.png" alt="Gender-reveal">
   <h3>Gender Reveal</h3>
 </a>
 
