--- a/index.html
+++ b/index.html
@@ -141,24 +141,34 @@
   <footer class="footer">
     <p>© <span id="year"></span> Les Pâtisseries de Lida — Tous droits réservés</p>
   </footer>
+<!-- سال فوتر -->
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
 
-  <!-- دکمه برگشت به بالا -->
-  <button id="scrollTopBtn" title="Haut de page" aria-label="Revenir en haut">↑</button>
+<!-- دکمهٔ برگشت به بالا (نسخهٔ لوکس با SVG) -->
+<button id="scrollTopBtn" class="scroll-top" title="Haut de page" aria-label="Revenir en haut">
+  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" aria-hidden="true">
+    <path fill="currentColor" d="M12 4c.28 0 .53.11.71.29l6 6a1 1 0 1 1-1.42 1.42L13 7.41V19a1 1 0 1 1-2 0V7.41l-4.29 4.3A1 1 0 0 1 5.3 10.3l6-6A1 1 0 0 1 12 4z"/>
+  </svg>
+</button>
 
-  <script>
-    // سال فوتر
-    document.getElementById('year').textContent = new Date().getFullYear();
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const scrollBtn = document.getElementById('scrollTopBtn');
 
-    // اسکرول به بالا
-    document.addEventListener('DOMContentLoaded', function () {
-      const scrollBtn = document.getElementById("scrollTopBtn");
-      window.addEventListener("scroll", () => {
-        scrollBtn.style.display = document.documentElement.scrollTop > 300 ? "block" : "none";
-      });
-      scrollBtn.addEventListener("click", () => {
-        window.scrollTo({ top: 0, behavior: "smooth" });
-      });
-    });
-  </script>
+  const toggleBtn = () => {
+    const y = document.documentElement.scrollTop || document.body.scrollTop;
+    scrollBtn.style.display = y > 300 ? 'flex' : 'none';
+  };
+  window.addEventListener('scroll', toggleBtn, { passive: true });
+  toggleBtn();
+
+  scrollBtn.addEventListener('click', () => {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  });
+});
+</script>
+
 </body>
 </html>
