--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -4,7 +4,22 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gâteau Gender Reveal | Les Pâtisseries de Lida</title>
+
   <meta name="description" content="Gâteau Gender Reveal : intérieur rose ou bleu, chantilly mascarpone ou buttercream, déco en pâte à sucre ou en crème. Personnalisation via WhatsApp.">
+
+  <header class="hero">
+    <img class="logo" src="../../../assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
+    <h1>Mariage</h1>
+    
+  <nav class="nav-buttons">
+
+  <a href="../../../index.html#galerie" class="btn">⟵ Retour</a>
+  <a href="#galerie" class="btn">Galerie</a>
+  <a href="../../../index.html#contact" class="btn">Contact</a>
+    </nav>
+  </header>
+
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
