--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -148,7 +148,7 @@
 
       <div>
         <div class="media">
-  <img src="assets/galerie/gender-reveal/gr1.png" alt="Gâteau Gender Reveal rose et bleu" 
+  <img src="assets/galerie/gender-reveal/gr1.jpg" alt="Gâteau Gender Reveal rose et bleu" 
        style="width:100%;height:auto;border-radius:22px;object-fit:cover;">
 </div>
         <div style="margin-top:12px">
@@ -184,6 +184,17 @@
     </footer>
   </div>
 
+
+
+  <section class="section">
+  <h2>Quelques réalisations</h2>
+  <div class="grid cols-3">
+    <img src="images/gender-reveal/1.jpg" alt="Gender Reveal Cake 1" style="width:100%;border-radius:18px;">
+    <img src="images/gender-reveal/2.jpg" alt="Gender Reveal Cake 2" style="width:100%;border-radius:18px;">
+    <img src="images/gender-reveal/3.jpg" alt="Gender Reveal Cake 3" style="width:100%;border-radius:18px;">
+  </div>
+  </section>
+
   <!-- Simple JSON-LD Product snippet -->
   <script type="application/ld+json">
   {
@@ -199,14 +210,5 @@
     }
   }
   </script>
-
-  <section class="section">
-  <h2>Quelques réalisations</h2>
-  <div class="grid cols-3">
-    <img src="images/gender-reveal/1.jpg" alt="Gender Reveal Cake 1" style="width:100%;border-radius:18px;">
-    <img src="images/gender-reveal/2.jpg" alt="Gender Reveal Cake 2" style="width:100%;border-radius:18px;">
-    <img src="images/gender-reveal/3.jpg" alt="Gender Reveal Cake 3" style="width:100%;border-radius:18px;">
-  </div>
-  </section>
 </body>
 </html>
